fix some bug and start main program

--- a/sw/tools/generators/Makefile
+++ b/sw/tools/generators/Makefile
@@ -33,6 +33,9 @@ GENACCMX = $(GENACCMO:.cmo=.cmx)
 
 all: gen_aircraft.out gen_airframe.out gen_ubx.out gen_mtk.out gen_flight_plan.out gen_periodic.out gen_settings.out gen_xsens.out gen_modules.out gen_autopilot.out gen_abi.out gen_srtm.out
 
+gen_aircraft.out : $(GENACCMO) $(LIBPPRZCMA)
+	@echo OL $@
+	$(Q)$(OCAMLC) $(INCLUDES) -o $@ $(LINKPKG) $^
 
 gen_flight_plan.out : gen_flight_plan.cmo $(LIBPPRZCMA) $(LIBPPRZLINKCMA)
 	@echo OL $@
