--- a/conf/Makefile.linux
+++ b/conf/Makefile.linux
@@ -68,7 +68,7 @@ CXXFLAGS += $(DEBUG_FLAGS)
 CXXFLAGS += -pipe -fshow-column -ffast-math
 CXXFLAGS += -g -ffunction-sections -fdata-sections
 CXXFLAGS += -Wall -Wextra
-#CXXFLAGS += $($(TARGET).CFLAGS)
+CXXFLAGS += $($(TARGET).CFLAGS)
 CXXFLAGS += $($(TARGET).CXXFLAGS)
 CXXFLAGS += $(USER_CFLAGS) $(BOARD_CFLAGS)
 
