--- a/sw/tools/generators/Makefile
+++ b/sw/tools/generators/Makefile
@@ -28,10 +28,10 @@ INCLUDES =
 PKG = -package pprz
 LINKPKG = $(PKG) -linkpkg -dllpath-pkg pprz,pprzlink
 
-GENACCMO = gen_airframe.cmo gen_flight_plan.cmo gen_autopilot.cmo gen_periodic.cmo gen_makefile.cmo gen_radio.cmo gen_aircraft.cmo
+GENACCMO = gen_airframe.cmo gen_flight_plan.cmo gen_autopilot.cmo gen_periodic.cmo gen_makefile.cmo gen_radio.cmo gen_modules.cmo gen_aircraft.cmo
 GENACCMX = $(GENACCMO:.cmo=.cmx)
 
-all: gen_aircraft.out gen_ubx.out gen_mtk.out gen_settings.out gen_xsens.out gen_modules.out gen_abi.out gen_srtm.out
+all: gen_aircraft.out gen_ubx.out gen_mtk.out gen_settings.out gen_xsens.out gen_abi.out gen_srtm.out
 
 gen_aircraft.out : $(GENACCMO) $(LIBPPRZCMA)
 	@echo OL $@
