--- a/sw/tools/generators/Makefile
+++ b/sw/tools/generators/Makefile
@@ -28,7 +28,7 @@ INCLUDES =
 PKG = -package pprz
 LINKPKG = $(PKG) -linkpkg -dllpath-pkg pprz,pprzlink
 
-GENACCMO = gen_airframe.cmo gen_flight_plan.cmo gen_autopilot.cmo gen_periodic.cmo gen_makefile.cmo gen_radio.cmo gen_modules.cmo gen_aircraft.cmo
+GENACCMO = gen_airframe.cmo gen_flight_plan.cmo gen_autopilot.cmo gen_periodic.cmo gen_makefile.cmo gen_radio.cmo gen_modules.cmo gen_settings.cmo gen_aircraft.cmo
 GENACCMX = $(GENACCMO:.cmo=.cmx)
 
 all: gen_aircraft.out gen_ubx.out gen_mtk.out gen_xsens.out gen_abi.out gen_srtm.out
@@ -36,10 +36,6 @@ all: gen_aircraft.out gen_ubx.out gen_mtk.out gen_xsens.out gen_abi.out gen_srtm
 gen_aircraft.out : $(GENACCMO) $(LIBPPRZCMA)
 	@echo OL $@
 	$(Q)$(OCAMLC) $(INCLUDES) -o $@ $(LINKPKG) $^
-
-#gen_flight_plan.out : gen_flight_plan.cmo $(LIBPPRZCMA) $(LIBPPRZLINKCMA)
-#	@echo OL $@
-#	$(Q)$(OCAMLC) $(INCLUDES) -o $@ $(LINKPKG) $^
 
 gen_srtm.out : gen_srtm.ml $(LIBPPRZCMA) $(LIBPPRZLINKCMA)
 	@echo OL $@
