--- a/Makefile.ac
+++ b/Makefile.ac
@@ -155,7 +155,7 @@ print_version:
 
 all_ac_h: $(SRCS_LIST) qt_project generate_keys build_rust_modules
 
-$(SRCS_LIST) : $(CONF_XML) $(AIRFRAME_H) $(MODULES_H) $(SETTINGS_H) $(MAKEFILE_AC) $(PERIODIC_H)
+$(SRCS_LIST):
 	@echo "TARGET: " $(TARGET) > $(SRCS_LIST)
 	@echo "CFLAGS: " $(CFLAGS) $(IINCDIR) $(TOPT) >> $(SRCS_LIST)
 	@echo "LDFLAGS: " $($(TARGET).LDFLAGS) >> $(SRCS_LIST)
@@ -307,12 +307,14 @@ makefile_ac: $(MAKEFILE_AC)
 	@echo "GENERATED Qt project"
 
 %.compile: %.ac_h | print_version
+	$(MAKE) TARGET=$* -f Makefile.ac all_ac_h
 	cd $(AIRBORNE); $(MAKE) -j$(NPROCS) TARGET=$* all
 
 %.upload: %.compile
 	cd $(AIRBORNE); $(MAKE) TARGET=$* upload
 
 sim sim.compile: sim.ac_h | print_version
+	$(MAKE) TARGET=sim -f Makefile.ac all_ac_h
 	cd $(AIRBORNE); $(MAKE) -j$(NPROCS) TARGET=sim ARCHI=sim ARCH=sim all
 
 # Rules for backward compatibility (old guys are used to !)
